// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateInflation with normalized fixtures > legacy-empty deterministic snapshot 1`] = `
{
  "auction_curve_model": "adaptive_surplus_v1",
  "auction_curve_reason": "fresh_board_linear",
  "auction_value_note": "auction_value is the official player dollar valuation for external evaluation and benchmarks. It always equals adjusted_value (league-wide auction dollars from the active inflation_model). The default inflation model is replacement_slots_v2.",
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "curve_guardrails": {
    "max_recommended_bid_vs_auction_ratio": 1.12,
    "max_top10_avg_auction_value": 91,
    "max_top_player_auction_value": 42,
    "max_top_surplus_share_of_allocatable": 0.4,
    "max_top_surplus_share_of_league_budget": 0.16,
  },
  "curve_inputs": {
    "active_rostered_count": 0,
    "active_slot_capacity": 36,
    "allocatable_surplus_dollars": 3084,
    "drafted_auction_count": 0,
    "inflation_factor": 0,
    "inflation_raw": 0,
    "keeper_count": 0,
    "linear_over_compressed": false,
    "linear_top1": 1,
    "linear_top10_spread": 0,
    "min_taxi_pool_count": 0,
    "open_slot_ratio": 1,
    "phase": "fresh",
    "remaining_active_slots": 36,
    "surplus_mass_ratio": 0,
    "total_surplus_mass": 0,
  },
  "draftable_player_ids": [
    "1",
  ],
  "draftable_pool_size": 1,
  "edge_note": "edge is team_adjusted_value minus recommended_bid after the max_bid clamp on recommended_bid (marginal roster dollars versus suggested bid). Symmetric pre-draft rows set team_adjusted_value equal to adjusted_value. Rare rows without team_adjusted_value use adjusted_value for the same minuend in validation.",
  "engine_contract_version": "1",
  "fallback_reason": "no_surplus_mass",
  "inflation_bounded_by": "none",
  "inflation_factor": 0,
  "inflation_model": "replacement_slots_v2",
  "inflation_raw": 0,
  "internal_allocation_mode": "linear",
  "max_bid_note": "max_bid is the team-specific hard stop (auction ceiling): computed after team_adjusted_value from team marginal dollars plus small bounded premiums (elite tier, slot scarcity, roster fit when asymmetric) and penalties (budget pressure, roster tightness). It is not an alias of recommended_bid; use auction_value for league-wide FMV.",
  "min_bid": 1,
  "phase_indicator": "early",
  "players_remaining": 2,
  "pool_value_remaining": 0,
  "recommended_bid_note": "recommended_bid is a suggested bid / draftroom market anchor (not league-wide FMV). It blends auction_value (a=adjusted_value) toward list baseline_value (r) via a phase/depth lambda L: initialClearingPrice = a + L*(r-a), then hitter/pitcher floors, caps, elite boosts, and isotonic smoothing. After that pass it is clamped to max_bid so the suggestion never exceeds the team hard stop.",
  "remaining_slots": 36,
  "replacement_values_by_slot_or_position": {
    "OF": 40,
  },
  "selected_weights": {
    "depth_weight": 1,
    "fringe_weight": 0.06,
    "star_fraction": 0.1,
    "star_weight": 1,
    "starter_fraction": 0.25,
    "starter_weight": 1,
  },
  "surplus_cash": 3084,
  "team_adjusted_value_note": "team_adjusted_value is marginal worth to the requesting team's roster and budget context (need, dollars per open slot vs peers, remaining-slot scarcity, replacement drop-off). It is not a league-universal player price and must not replace auction_value for cross-player evaluation or leaderboards.",
  "top10_linear_spread": 0,
  "total_budget_remaining": 3120,
  "total_surplus_mass": 0,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 40,
      "auction_rank": 1,
      "auction_tier": 1,
      "auction_value": 40,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 1,
      "baseline_tier": 1,
      "baseline_value": 40,
      "catalog_rank": 5,
      "catalog_tier": 1,
      "edge": -1.04,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "max_bid": 41.04,
      "name": "Alpha",
      "player_id": "1",
      "position": "OF",
      "recommended_bid": 41.04,
      "scarcity_adjustment": 0,
      "team": "NYY",
      "team_adjusted_value": 40,
    },
    {
      "adjusted_value": 12,
      "auction_rank": 2,
      "auction_tier": 3,
      "auction_value": 12,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 2,
      "baseline_tier": 3,
      "baseline_value": 12,
      "catalog_rank": 50,
      "catalog_tier": 3,
      "edge": 0,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "max_bid": 12,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 12,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 12,
    },
  ],
}
`;

exports[`calculateInflation with normalized fixtures > nested-after-pick applies player_ids filter 1`] = `
{
  "auction_curve_model": "adaptive_surplus_v1",
  "auction_curve_reason": "healthy_linear_spread",
  "auction_value_note": "auction_value is the official player dollar valuation for external evaluation and benchmarks. It always equals adjusted_value (league-wide auction dollars from the active inflation_model). The default inflation model is replacement_slots_v2.",
  "calculated_at": "1970-01-01T00:00:00.000Z",
  "curve_guardrails": {
    "max_recommended_bid_vs_auction_ratio": 1.12,
    "max_top10_avg_auction_value": 91,
    "max_top_player_auction_value": 42,
    "max_top_surplus_share_of_allocatable": 0.4,
    "max_top_surplus_share_of_league_budget": 0.16,
  },
  "curve_inputs": {
    "active_rostered_count": 0,
    "active_slot_capacity": 36,
    "allocatable_surplus_dollars": 3030,
    "drafted_auction_count": 1,
    "inflation_factor": 0,
    "inflation_raw": 0,
    "keeper_count": 0,
    "linear_over_compressed": false,
    "linear_top1": 1,
    "linear_top10_spread": 0,
    "min_taxi_pool_count": 0,
    "open_slot_ratio": 0.9722,
    "phase": "mid_draft",
    "remaining_active_slots": 35,
    "surplus_mass_ratio": 0,
    "total_surplus_mass": 0,
  },
  "draftable_player_ids": [],
  "draftable_pool_size": 0,
  "edge_note": "edge is team_adjusted_value minus recommended_bid after the max_bid clamp on recommended_bid (marginal roster dollars versus suggested bid). Symmetric pre-draft rows set team_adjusted_value equal to adjusted_value. Rare rows without team_adjusted_value use adjusted_value for the same minuend in validation.",
  "engine_contract_version": "1",
  "fallback_reason": "no_surplus_mass",
  "inflation_bounded_by": "none",
  "inflation_factor": 0,
  "inflation_model": "replacement_slots_v2",
  "inflation_raw": 0,
  "internal_allocation_mode": "linear",
  "max_bid_note": "max_bid is the team-specific hard stop (auction ceiling): computed after team_adjusted_value from team marginal dollars plus small bounded premiums (elite tier, slot scarcity, roster fit when asymmetric) and penalties (budget pressure, roster tightness). It is not an alias of recommended_bid; use auction_value for league-wide FMV.",
  "min_bid": 1,
  "phase_indicator": "early",
  "players_remaining": 1,
  "pool_value_remaining": 0,
  "recommended_bid_note": "recommended_bid is a suggested bid / draftroom market anchor (not league-wide FMV). It blends auction_value (a=adjusted_value) toward list baseline_value (r) via a phase/depth lambda L: initialClearingPrice = a + L*(r-a), then hitter/pitcher floors, caps, elite boosts, and isotonic smoothing. After that pass it is clamped to max_bid so the suggestion never exceeds the team hard stop.",
  "remaining_slots": 35,
  "replacement_values_by_slot_or_position": {
    "OF": 0,
  },
  "selected_weights": {
    "depth_weight": 1,
    "fringe_weight": 0.06,
    "star_fraction": 0.1,
    "star_weight": 1,
    "starter_fraction": 0.25,
    "starter_weight": 1,
  },
  "surplus_cash": 3030,
  "team_adjusted_value_note": "team_adjusted_value is marginal worth to the requesting team's roster and budget context (need, dollars per open slot vs peers, remaining-slot scarcity, replacement drop-off). It is not a league-universal player price and must not replace auction_value for cross-player evaluation or leaderboards.",
  "top10_linear_spread": 0,
  "total_budget_remaining": 3065,
  "total_surplus_mass": 0,
  "user_team_id_used": "team_1",
  "valuation_model_version": Any<String>,
  "valuations": [
    {
      "adjusted_value": 12,
      "auction_rank": 1,
      "auction_tier": 1,
      "auction_value": 12,
      "baseline_components": {
        "age_depth_combined_multiplier": 1,
        "age_multiplier": 1,
        "depth_multiplier": 1,
        "injury_multiplier": 1,
        "injury_severity": 0,
        "projection_component": 0,
        "scarcity_component": 0,
        "scoring_format": "default",
      },
      "baseline_rank": 1,
      "baseline_tier": 1,
      "baseline_value": 12,
      "catalog_rank": 50,
      "catalog_tier": 3,
      "edge": -0.05,
      "indicator": "Fair Value",
      "inflation_adjustment": 0,
      "inflation_factor": 0,
      "max_bid": 12.26,
      "name": "Beta",
      "player_id": "2",
      "position": "SP",
      "recommended_bid": 12,
      "scarcity_adjustment": 0,
      "team": "BOS",
      "team_adjusted_value": 11.95,
    },
  ],
}
`;

exports[`parseValuationRequest + root fixtures > normalizes legacy-empty.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": undefined,
  "deterministic": false,
  "drafted_players": [],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": undefined,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": undefined,
  "position_overrides": undefined,
  "pre_draft_rosters": undefined,
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "0.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-after-pick.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "after_pick_1",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": false,
      "name": "Star Player",
      "paid": 55,
      "pick_number": 1,
      "player_id": "1",
      "position": "OF",
      "positions": [
        "OF",
        "DH",
      ],
      "team": "NYY",
      "team_id": "team_1",
    },
  ],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": undefined,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": undefined,
  "num_teams": 12,
  "player_ids": [
    "2",
  ],
  "pos_eligibility_threshold": undefined,
  "position_overrides": undefined,
  "pre_draft_rosters": undefined,
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": undefined,
  "seed": undefined,
  "taxi": undefined,
  "total_budget": 260,
  "user_team_id": undefined,
}
`;

exports[`parseValuationRequest + root fixtures > normalizes nested-pre-draft.json 1`] = `
{
  "budget_by_team_id": undefined,
  "checkpoint": "pre_draft",
  "deterministic": true,
  "drafted_players": [],
  "eligible_player_ids": undefined,
  "excluded_player_ids": undefined,
  "explain_valuation_rows": undefined,
  "hitter_budget_pct": 0.65,
  "inflation_model": "replacement_slots_v2",
  "league_scope": "Mixed",
  "minors": {},
  "num_teams": 12,
  "player_ids": undefined,
  "pos_eligibility_threshold": 5,
  "position_overrides": undefined,
  "pre_draft_rosters": {
    "team_1": [],
  },
  "recommended_bid_soft_cap_ratio": undefined,
  "roster_slots": [
    {
      "count": 3,
      "position": "OF",
    },
  ],
  "schemaVersion": "1.0.0",
  "scoring_categories": [
    {
      "name": "HR",
      "type": "batting",
    },
  ],
  "scoring_format": "5x5",
  "seed": undefined,
  "taxi": {},
  "total_budget": 260,
  "user_team_id": undefined,
}
`;
